# parallella

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cpplint.py  main.cpp
ExploreOpenCL/: AcceleratorDevice.cpp  AcceleratorDevice.h  CMakeLists.txt  Utilities.cpp  Utilities.h
ExploreOpenCLTest/: CMakeLists.txt
ExploreOpenCLTest/tests/: AccleratorDeviceTest.cpp  CMakeLists.txt
VectorMultiply/: CMakeLists.txt  VectorMultiply.cpp
src/: README.md
src/ExploreOpenCL/: AcceleratorDevice.cpp  AcceleratorDevice.h  CMakeLists.txt  Utilities.cpp  main.cpp
src/HelloWorld/: CMakeLists.txt  main.cpp
src/VectorMultiply/: CMakeLists.txt  hello-opencl.cpp
